samples/_failures_safe/1761075968_224e46_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2cc59def.c: In function ‘transform_bounds’:
./samples/SAFE/__tmp_2cc59def.c:124:9: error: expected expression at end of input
  124 |         if (
      |         ^~
./samples/SAFE/__tmp_2cc59def.c:124:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2cc59def.c:124:9: error: expected declaration or statement at end of input
